# leadsgen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  ct_feed.py  discord_notifier.py  domain_feed.py  domains_monitor.py  main.py  models.py  pipeline.py  processed_dates.py  snapshot_store.py
app/agents/: __init__.py  classification.py  dns_agent.py  domain.py  kvk.py  llm_scorer.py  scoring.py  website.py
scripts/: build_registered_domains_txt.py  download_domainmetadata_nl_domains.py  download_domains_monitor_nl_domains.py  fetch_ct_observed_nl_domains.py  run_domains_monitor_snapshot.py  snapshot_and_notify.py  snapshot_domains_monitor_nl.py
tests/: test_classification.py  test_ct_feed.py  test_domain.py  test_domain_feed.py  test_domainmetadata_download.py  test_domains_monitor.py  test_domains_monitor_snapshots.py  test_kvk.py  test_openapi.py  test_scoring.py  test_snapshot_store.py  test_website.py
